<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/display_header">

        <SwitchPreferenceCompat
                app:key="@string/OPEN_APP_PREF_KEY"
                app:persistent="true"
                app:summary="@string/opening_preference_summary"
                app:title="@string/opening_preference" />

        <SwitchPreferenceCompat
                app:key="@string/NOTIFICATION_PREF_KEY"
                app:persistent="true"
                app:title="@string/show_notification_preference" />

        <SwitchPreferenceCompat
                app:key="@string/DARK_MODE_BY_SYSTEM_SETTINGS_PREF_KEY"
                app:persistent="true"
                app:title="@string/enable_dark_mode_device_settings" />

        <SwitchPreferenceCompat
                app:key="@string/DARK_MODE_BY_TOGGLE_PREF_KEY"
                app:persistent="true"
                app:title="@string/enable_dark_mode" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Customize Double Tap">

        <SwitchPreferenceCompat
                app:key="@string/ENABLE_CUSTOM_TAP_PREF_KEY"
                app:persistent="true"
                app:title="@string/enable_custom_double_tap_title" />

        <ListPreference
                app:defaultValue="OFF"
                app:dependency="@string/ENABLE_CUSTOM_TAP_PREF_KEY"
                app:entries="@array/custom_tap_options_text"
                app:entryValues="@array/custom_tap_options_values"
                app:key="@string/CUSTOM_TAP_ACTION_PREF_KEY"
                app:title="@string/custom_tap_action_title"
                app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
